@@ -1,11 +1,0 @@
-{
-  "result": {
-    "item": "silentgear:dried_sinew"
-  },
-  "ingredients": [
-    {
-      "item": "silentgear:sinew"
-    }
-  ],
-  "type": "minecraft:crafting_shapeless"
-}
